# goit-pythonweb-hw-10

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: c4fb2a6001ae_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/db/: db.py  models.py
src/mail-templates/: email-confirmation.html
src/repositories/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
